deplyoment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      run: my-nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
           path: /
           port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
           path: /
           port: 80
          initialDelaySeconds: 5
          periodSeconds: 5



---
apiVersion: v1
kind: Service
metadata:
  name: my-mongodb
  labels:
    name: my-mongodb
spec:
  ports:
    - port: 27017
      name: mongodb
  selector:
    app: mongodb
