ingress-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-demo
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: ingress-cont
        image: gcr.io/google-samples/hello-app:1.0

---
apiVersion: v1
kind: Service
metadata:
  name: my-mongodb
  labels:
    name: my-mongodb
spec:
  ports:
    - port: 27017
      name: mongodb
  selector:
    app: myapp
