nodeaffinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2                     # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:

      nodeName: worker1/worker2         # schedule pod to specific node

      nodeSelector:
        label: workerA/workerB          # schedule pod to nodes with this label

      affinity:
        nodeAffinity:

          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: label
                operator: In
                values:
                - workerA/workerB


          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: label
                operator: In
                values:
                - workerA
          - weight: 1
            preference:
              matchExpressions:
              - key: label
                operator: In
                values:
                - workerB
  containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30085
      name: http
  selector:
          app: nginx
